# FastAPI_Project

./: .env  gitignore  main.py  pyproject.toml  readme.md
DB/: data.py
api/: router.py
api/routes/: server.py
core/: config.py
data/: data.py
exceltojson/: example_data.xlsx  excel2json.py  output_data.json
schemas/: server.py
